# DPtraj

./: README.md
NeuralTraj/src/path_search/src/: kino_astar.cpp  nnPath.cpp
NeuralTraj/src/plan_manage/config/: planning_ruin.yaml
NeuralTraj/src/plan_manage/include/arcPlan/: Trajopt_penalty.hpp
NeuralTraj/src/plan_manage/launch/: plan_node.launch  plan_node2.launch
NeuralTraj/src/plan_manage/src/: plan_manage.cpp  plan_node.cpp
NeuralTraj/src/simulator/kinematics_simulator/: CMakeLists.txt
NeuralTraj/src/simulator/kinematics_simulator/msg/: ControlCmd.msg
NeuralTraj/src/simulator/random_map_generator/: CMakeLists.txt
NeuralTraj/src/simulator/random_map_generator/launch/: data_generation.launch  image_pro.launch
NeuralTraj/src/simulator/random_map_generator/rviz/: default.rviz
NeuralTraj/src/simulator/random_map_generator/src/: egeneration_node.cpp  random_map_node.cpp
STPP_DEPLOY/: README.md
STPP_DEPLOY/NeuralTraj/: run.sh
STPP_DEPLOY/NeuralTraj/src/path_search/: CMakeLists.txt
STPP_DEPLOY/NeuralTraj/src/plan_manage/: CMakeLists.txt
STPP_DEPLOY/NeuralTraj/src/plan_manage/config/: planning_forest.yaml  planning_office.yaml
STPP_DEPLOY/NeuralTraj/src/plan_manage/include/arcPlan/: Polytraj.hpp  Trajopt_alm.hpp
STPP_DEPLOY/NeuralTraj/src/plan_manage/include/plan_manage/: plan_manage.h
STPP_DEPLOY/NeuralTraj/src/plan_manage/launch/: plan_node3.launch
STPP_DEPLOY/NeuralTraj/src/plan_manage/testdata/forest/esdfmaps/: 29555.xml  29556.xml  29557.xml  29562.xml  29563.xml  29565.xml  29566.xml  29567.xml  29569.xml  29578.xml  29579.xml  29582.xml  29587.xml  29588.xml  29589.xml  29590.xml  29597.xml  29598.xml
STPP_DEPLOY/NeuralTraj/src/plan_manage/testdata/office/esdfmaps/: 29553.xml  29554.xml  29557.xml  29559.xml  29565.xml  29566.xml  29567.xml  29568.xml  29570.xml  29573.xml  29577.xml  29578.xml  29580.xml  29581.xml  29582.xml  29583.xml  29584.xml  29585.xml  29592.xml  29593.xml  29595.xml  29596.xml  29597.xml  29599.xml
STPP_DEPLOY/NeuralTraj/src/plan_manage/testdata/ruins/esdfmaps/: 29552.xml  29554.xml  29556.xml  29558.xml  29559.xml  29560.xml  29561.xml  29562.xml  29565.xml  29566.xml  29568.xml  29569.xml  29571.xml  29572.xml  29574.xml  29575.xml  29576.xml  29577.xml  29578.xml  29580.xml  29582.xml  29583.xml  29586.xml  29587.xml  29589.xml  29590.xml  29591.xml  29593.xml  29595.xml  29599.xml
deepPathPlan/: requirements.txt
deepPathPlan/PathNet/: Layers.py  SubLayers.py  course.py  data_loader.py  loss.py  network.py  resnet.py  resshep.py  train_ours.py  train_resnet.py  visualizer_tojit.py
deepPathPlan/models/: model.pkl.txt  model.pklStep.txt
trajectoryOpt/src/path_search/: CMakeLists.txt
trajectoryOpt/src/path_search/include/path_searching/: kino_astar.h
trajectoryOpt/src/path_search/src/: kino_astar.cpp
trajectoryOpt/src/plan_manage/: CMakeLists.txt
trajectoryOpt/src/plan_manage/config/: planning copy.yaml  planning.yaml  planning_v1.yaml  planning_v2.yaml  planning_v3.yaml
trajectoryOpt/src/plan_manage/include/arcPlan/: Trajopt_alm.hpp
trajectoryOpt/src/plan_manage/include/difPlan/: poly_traj_utils.hpp  trajDif_opt.hpp
trajectoryOpt/src/plan_manage/include/plan_manage/: plan_manage.h
trajectoryOpt/src/plan_manage/launch/: plan_node.launch
trajectoryOpt/src/plan_manage/rviz/: default.rviz
trajectoryOpt/src/plan_manage/src/: plan_manage.cpp
trajectoryOpt/src/simulator/kinematics_simulator/launch/: run_simulator.launch
trajectoryOpt/src/simulator/kinematics_simulator/params/: simulator.yaml
trajectoryOpt/src/simulator/random_map_generator/: CMakeLists.txt  package.xml
trajectoryOpt/src/simulator/random_map_generator/launch/: test.launch  vis.launch
trajectoryOpt/src/simulator/random_map_generator/params/: map.yaml
trajectoryOpt/src/simulator/random_map_generator/rviz/: vis.rviz
(+91 files in other folders)
